--- a/html_files/test.html
+++ b/html_files/test.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<div id="main_header"><h1><a href="./main.html" style="font-size:23px">Nitrat's HTML Documentation</a></h1></div>
+<div id="main_header"><h1><a href="../main.html" style="font-size:23px">Nitrat's HTML Documentation</a></h1></div>
 
 <div id="sidebar">
   <p> Under Construction </p>
