--- a/main.html
+++ b/main.html
@@ -15,11 +15,12 @@
     <p> Under Construction </p>
     <ol id="navigation_menu">
       <li><a href="./html_files/test.html">Introduction to HTML</a></li>
-      <li><a href="link2">Content 2</a></li>
-      <li><a href="link3">Content 3</a></li>
-      <li><a href="link4">Content 4</a></li>
-      <li><a href="link5">Content 5</a></li>
-      <li><a href="link6">Content 6</a></li>
+      <li><a href="./html_files/">HTML Basics</a></li>
+      <li><a href="./html_files/">Styling and Formatting</a></li>
+      <li><a href="./html_files/">Tables</a></li>
+      <li><a href="./html_files/">Lists</a></li>
+      <li><a href="./html_files/">ID and Class Variables</a></li>
+      <li><a href="./html_files/">IFrames</a></li>
     </ol>
   </div>
 
