updated a lot, i can't explain it here sry

--- a/html_files/template.html
+++ b/html_files/template.html
@@ -3,24 +3,23 @@
 
   <head>
     <title>Nitrat's HTML Documentation</title>
-    <link rel="stylesheet" href="./main.css"/>
-    
+    <link rel="stylesheet" href="../main.css"/>
   </head>
   
   <body>
 
-  <div id="main_header"><h1><a href="./main.html" style="font-size:23px">Nitrat's HTML Documentation</a></h1></div>
+  <div id="main_header"><h1><a href="../main.html" style="font-size:23px">Nitrat's HTML Documentation</a></h1></div>
 
   <div id="sidebar">
     <p> Under Construction </p>
     <ol id="navigation_menu">
-      <li><a href="./html_files/test.html">Introduction to HTML</a></li>
-      <li><a href="./html_files/">HTML Basics</a></li>
-      <li><a href="./html_files/">Styling and Formatting</a></li>
-      <li><a href="./html_files/">Tables</a></li>
-      <li><a href="./html_files/">Lists</a></li>
-      <li><a href="./html_files/">ID and Class Variables</a></li>
-      <li><a href="./html_files/">IFrames</a></li>
+      <li><a href="../html_files/test.html">Introduction to HTML</a></li>
+      <li><a href="../html_files/">HTML Basics</a></li>
+      <li><a href="../html_files/">Styling and Formatting</a></li>
+      <li><a href="../html_files/">Tables</a></li>
+      <li><a href="../html_files/">Lists</a></li>
+      <li><a href="../html_files/">ID and Class Variables</a></li>
+      <li><a href="../html_files/">IFrames</a></li>
     </ol>
   </div>
 
