--- a/main.html
+++ b/main.html
@@ -14,22 +14,21 @@
   <div id="sidebar">
     <p> Under Construction </p>
     <ol id="navigation_menu">
-      <li><a href="./html_files/test.html">Introduction to HTML</a></li>
-      <li><a href="./html_files/">HTML Basics</a></li>
-      <li><a href="./html_files/">Styling and Formatting</a></li>
-      <li><a href="./html_files/">Tables</a></li>
-      <li><a href="./html_files/">Lists</a></li>
-      <li><a href="./html_files/">ID and Class Variables</a></li>
+      <li><a href="./html_files/1_intro_page.html">Introduction to HTML</a></li>
+      <li><a href="./html_files/2_basic_page.html">HTML Basics</a></li>
+      <li><a href="./html_files/3_style_format_page.html">Styling and Formatting</a></li>
+      <li><a href="./html_files/4_table_page.html">Tables</a></li>
+      <li><a href="./html_files/5_list.html">Lists</a></li>
+      <li><a href="./html_files/6_id_class.html">ID and Class Variables</a></li>
       <li><a href="./html_files/">IFrames</a></li>
     </ol>
   </div>
 
   <div id="main">
-    <h2 class="header">Introduction </h2>
+    <h2 class="header">Welcome :)</h2>
     <p> Welcome to my HTML Documentation. You can use the left menu for navigating through contents.</p>
     <p> This website was developed with only HTML and CSS. 
       This is for SE480 course of Izmir University of Economics.</p>
-    <h3 class="header">Test</h3>
   </div>
 
   <div id="footer"><footer>Developed by <a href="https://github.com/ozanyucell">Ozan Yucel</a></footer></div>
