i have no idea what changed

--- a/html_files/template.html
+++ b/html_files/template.html
@@ -13,12 +13,12 @@
   <div id="sidebar">
     <p> Under Construction </p>
     <ol id="navigation_menu">
-      <li><a href="../html_files/test.html">Introduction to HTML</a></li>
-      <li><a href="../html_files/">HTML Basics</a></li>
-      <li><a href="../html_files/">Styling and Formatting</a></li>
-      <li><a href="../html_files/">Tables</a></li>
-      <li><a href="../html_files/">Lists</a></li>
-      <li><a href="../html_files/">ID and Class Variables</a></li>
+      <li><a href="../html_files/1_intro_page.html">Introduction to HTML</a></li>
+      <li><a href="../html_files/2_basic_page.html">HTML Basics</a></li>
+      <li><a href="../html_files/3_style_format_page.html">Styling and Formatting</a></li>
+      <li><a href="../html_files/4_table_page.html">Tables</a></li>
+      <li><a href="../html_files/5_list.html">Lists</a></li>
+      <li><a href="../html_files/6_id_class.html">ID and Class Variables</a></li>
       <li><a href="../html_files/">IFrames</a></li>
     </ol>
   </div>
