--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
     <p> Welcome to my HTML Documentation. You can use the left menu for navigating through contents.</p>
     <p> This website was developed with only HTML and CSS. 
       This is for SE480 course of Izmir University of Economics.</p>
+    <p>Source: <a href=https://www.w3schools.com>W3 Schools</a>, <a href=https://ce.ieu.edu.tr/en>Izmir University of Economics SE480 course content.</a></p>
   </div>
 
   <div id="footer"><footer>Developed by <a href="https://github.com/ozanyucell">Ozan Yucel</a></footer></div>
