--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
       <li><a href="./html_files/4_table_page.html">Tables</a></li>
       <li><a href="./html_files/5_list.html">Lists</a></li>
       <li><a href="./html_files/6_id_class.html">ID and Class Variables</a></li>
-      <li><a href="./html_files/">IFrames</a></li>
+      <li><a href="./html_files/7_iframes.html">IFrames</a></li>
     </ol>
   </div>
 
