--- a/html_files/4_table_page.html
+++ b/html_files/4_table_page.html
@@ -13,13 +13,13 @@
   <div id="sidebar">
     <p> Under Construction </p>
     <ol id="navigation_menu">
-        <li><a href="../html_files/1_intro_page.html">Introduction to HTML</a></li>
-        <li><a href="../html_files/2_basic_page.html">HTML Basics</a></li>
-        <li><a href="../html_files/3_style_format_page.html">Styling and Formatting</a></li>
-        <li><a href="../html_files/4_table_page.html">Tables</a></li>
-        <li><a href="../html_files/5_list.html">Lists</a></li>
-        <li><a href="../html_files/6_id_class.html">ID and Class Variables</a></li>
-        <li><a href="../html_files/">IFrames</a></li>
+      <li><a href="../html_files/1_intro_page.html">Introduction to HTML</a></li>
+      <li><a href="../html_files/2_basic_page.html">HTML Basics</a></li>
+      <li><a href="../html_files/3_style_format_page.html">Styling and Formatting</a></li>
+      <li><a href="../html_files/4_table_page.html">Tables</a></li>
+      <li><a href="../html_files/5_list.html">Lists</a></li>
+      <li><a href="../html_files/6_id_class.html">ID and Class Variables</a></li>
+      <li><a href="../html_files/7_iframes.html">IFrames</a></li>
     </ol>
   </div>
 
