--- a/html_files/6_id_class.html
+++ b/html_files/6_id_class.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
   <head>
-    <title>Nitrat's HTML Documentation</title>
+    <title>HTML Documentation</title>
     <link rel="stylesheet" href="../main.css"/>
   </head>
   
   <body>
 
-  <div id="main_header"><h1><a href="../main.html" style="font-size:23px">Nitrat's HTML Documentation</a></h1></div>
+  <div id="main_header"><h1><a href="../main.html" style="font-size:23px">HTML Documentation</a></h1></div>
 
   <div id="sidebar">
-    <p> Under Construction </p>
+    <p> Content </p>
     <ol id="navigation_menu">
       <li><a href="../html_files/1_intro_page.html">Introduction to HTML</a></li>
       <li><a href="../html_files/2_basic_page.html">HTML Basics</a></li>
