--- a/html_files/template.html
+++ b/html_files/template.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
   <head>
-    <title>Nitrat's HTML Documentation</title>
+    <title>HTML Documentation</title>
     <link rel="stylesheet" href="../main.css"/>
   </head>
   
   <body>
 
-  <div id="main_header"><h1><a href="../main.html" style="font-size:23px">Nitrat's HTML Documentation</a></h1></div>
+  <div id="main_header"><h1><a href="../main.html" style="font-size:23px">HTML Documentation</a></h1></div>
 
   <div id="sidebar">
     <p> Under Construction </p>
