--- a/html_files/iframe_files/1-introduction.html
+++ b/html_files/iframe_files/1-introduction.html
@@ -41,6 +41,8 @@
 
 &lt;/html&gt; 
 </div></code></code></pre>
+<h3>HTML Structure</h3>
+<img src="../../images/html_structure.png" alt="HTML Structure"> 
 <ul>
 <li>We will discuss these elements in more detail on next documents. First, let's discuss about what is an element.</li>
 </ul>
