--- a/html_files/iframe_files/2-basics.html
+++ b/html_files/iframe_files/2-basics.html
@@ -42,6 +42,12 @@
 &lt;h2&gt;This is heading 2&lt;/h2&gt;
 &lt;h3&gt;This is heading 3&lt;/h3&gt; 
 </div></code></code></pre>
+
+<p>Is going to look like:</p>
+<pre><code><div><h1>This is heading 1</h1>
+    <h2>This is heading 2</h2>
+    <h3>This is heading 3</h3>
+    </div></code></pre>
 <h3 id="paragraphs">Paragraphs</h3>
 <ul>
 <li>HTML paragraphs are defined with the <code>&lt;p&gt;</code> tag.</li>
