--- a/html_files/6_id_class.html
+++ b/html_files/6_id_class.html
@@ -20,6 +20,7 @@
       <li><a href="../html_files/5_list.html">Lists</a></li>
       <li><a href="../html_files/6_id_class.html">ID and Class Variables</a></li>
       <li><a href="../html_files/7_iframes.html">IFrames</a></li>
+      <li><a href="../html_files/8_comments.html">Comments</a></li>
     </ol>
   </div>
 
