--- a/html_files/8_comments.html
+++ b/html_files/8_comments.html
@@ -25,7 +25,7 @@
   </div>
 
   <div id="main">
-    <iframe src="../html_files/iframe_files/2-basics.html" style="border:none;" title="" height="660" width="1580"></iframe> 
+    <iframe src="../html_files/iframe_files/8-comments.html/" style="border:none;" title="" height="660" width="1580"></iframe> 
   </div>
 
   <div id="footer"><footer>Developed by <a href="https://github.com/ozanyucell">Ozan Yucel</a></footer></div>
