--- a/html_files/iframe_files/3-styling_formatting.html
+++ b/html_files/iframe_files/3-styling_formatting.html
@@ -72,6 +72,8 @@
 <pre><code><code><div>&lt;h1 style=&quot;text-align:center;&quot;&gt;Centered Heading&lt;/h1&gt;
 &lt;p style=&quot;text-align:center;&quot;&gt;Centered paragraph.&lt;/p&gt; 
 </div></code></code></pre>
+<h2>Space Allocation</h2>
+<image src= ../../images/margin-padding.png width="716.3px" height="554.45px"></image>
 <h1 id="formatting">Formatting</h1>
 <h3 id="formatting-layouts">Formatting Layouts</h3>
 <h3 id="hr-tag"><code>&lt;hr&gt;</code> Tag</h3>
