--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
       <li><a href="./html_files/5_list.html">Lists</a></li>
       <li><a href="./html_files/6_id_class.html">ID and Class Variables</a></li>
       <li><a href="./html_files/7_iframes.html">IFrames</a></li>
+      <li><a href="./html_files/8_comments.html">Comments</a></li>
     </ol>
   </div>
 
@@ -29,7 +30,7 @@
     <p> Welcome to my HTML Documentation. You can use the left menu for navigating through contents.</p>
     <p> This website was developed with only HTML and CSS. 
       This is for SE480 course of Izmir University of Economics.</p>
-    <p>Source: <a href=https://www.w3schools.com>W3 Schools</a>, Izmir University of Economics SE480 <a href=https://ce.ieu.edu.tr/en>course content.</a></p>
+    <p>Source: <a href=https://www.w3schools.com>W3 Schools</a>, Izmir University of Economics <a href=https://ce.ieu.edu.tr/en>SE480 course content.</a></p>
   </div>
 
   <div id="footer"><footer>Developed by <a href="https://github.com/ozanyucell">Ozan Yucel</a></footer></div>
